[package]
name = "cwparse"
version = "0.1.0"
edition = "2021"
authors = ["Robin Avery <robin@ribbanya.dev>"]
license = "LGPL-3.0-or-later"

[dependencies]
nom = "7.1.3"

[dev-dependencies]
anyhow = "1.0.70"
memmap2 = "0.5.10"
nom-supreme = "0.8.0"
prettydiff = "0.6.2"
rayon = "1.7.0"
test-case = "3.1.0"
